# phd-kb

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  explore.ipynb  pyproject.toml
agents/: commands.py  config.py  discounts.py  file_watcher.py  git_ops.py  llm.py  main.py  models.py  state.py  vault.py
agents/sub_agents/: base.py
agents/supervisor/: graph.py
prompts/: README.md  compile-source.md  eval-source.md  extract-references.md  lint-wiki.md  query.md  synthesize.md  update-chapter.md  write-concept.md
raw/: README.md  _catalog.json  _catalog.md
raw/notes/: virtual-species-pipeline-idea.md
raw/papers/: GEB-2026-macroecology.md  allouche2006-tss-accuracy.md  araujo2006-sdm-challenges.md  araujo2007-ensemble-forecasting.md  efron1993-bootstrap.md  elith2009-sdm-review.md  elith2010-range-shifting.md  fitzpatrick2009-non-analog-climate.md  guisan2013-sdm-conservation.md  meyer2021-area-of-applicability.md  pearman2008-niche-dynamics.md  peterson2011-niches-distributions.md  roberts2017-cross-validation.md  santini2021-sdm-reliability.md  thuiller2005-climate-change-plants.md  urban2015-extinction-risk.md  williams2007-novel-climates.md  yates2018-model-transferability.md
research/: README.md
research/templates/: _research-index.md  chapter-1-current-state.md  chapter-2-methodology.md  chapter-3-findings.md
tests/: conftest.py  test_commands.py  test_ingest.py  test_llm.py  test_models.py  test_vault.py
wiki/: README.md  _glossary.md  _index.md  _sources.md
wiki/concepts/: ecological-niche.md  (+4 more)
(+28 files in other folders)
